--- a/NumPy/Sourabh_NumPy_Assignment_.ipynb
+++ b/NumPy/Sourabh_NumPy_Assignment_.ipynb
@@ -44,7 +44,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1033,7 +1033,7 @@
         "              [11, 12, 13, 14]\n",
         "])"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1060,28 +1060,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd2c465c-1cbf-41db-bc06-dc25fd9f28fb"
+        "outputId": "a816a32d-8326-4d59-8fdd-6c83ae3b0ba3"
       },
       "source": [
-        "arr30=np.array([(a[0],b[0:1]),a[1]])\n",
-        "print(arr30)"
+        "arr30=np.append(a[0],b[0])\n",
+        "arr31=np.append(a[1],b[1])\n",
+        "np.array([arr30,arr31])"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[(array([1, 2, 3]), array([[ 7,  8,  9, 10]])) array([4, 5, 6])]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3,  7,  8,  9, 10],\n",
+              "       [ 4,  5,  6, 11, 12, 13, 14]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
         }
       ]
     },
@@ -1244,23 +1241,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gIdSqYkmAgNw",
-        "outputId": "b9099536-0364-465c-9c4f-f4ead58ebc56"
+        "outputId": "dd741723-0d90-480e-e5d6-bdd80b802113"
       },
       "source": [
         "arr = np.round(np.random.rand(10)*10)\n",
         "arr"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([3., 6., 5., 8., 5., 8., 7., 7., 5., 8.])"
+              "array([0., 9., 1., 8., 1., 6., 0., 0., 2., 2.])"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 18
         }
       ]
     },
@@ -1271,18 +1268,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c42eed2c-46dc-4d24-e139-6132d8997477"
+        "outputId": "92cdf7eb-88b8-4986-e352-ac374c23f3eb"
       },
       "source": [
-        ""
+        "arr1=arr.min()\n",
+        "count=(arr==arr1).sum()\n",
+        "print(\"min is\", arr1)\n",
+        "print(\"there are \",count,\"occurences of\",arr1)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n"
+            "min is 0.0\n",
+            "there are  3 occurences of 0.0\n"
           ]
         }
       ]
